--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "Cory Forward",
   "license": "ISC",
   "dependencies": {
+    "@types/core-js": "^0.9.34",
+    "core-js": "^2.4.1",
     "jsbn": "^0.1.0"
   },
   "devDependencies": {
