--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
     "outDir": "dist",
     "moduleResolution": "node",
     "module": "commonjs",
-    "declaration": true,
+    "declaration": false,
     "declarationDir": "decl",
     "removeComments": true,
     "noLib": false,
