--- a/package.json
+++ b/package.json
@@ -4,18 +4,47 @@
   "description": "An emulator for a CPU that supports the LEGv8 instruction set",
   "main": "dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "node build/dev-server.js",
+    "build": "node build/build.js"
   },
   "author": "Cory Forward",
   "license": "ISC",
   "dependencies": {
     "@types/core-js": "^0.9.34",
+    "brace": "^0.8.0",
     "core-js": "^2.4.1",
     "jsbn": "^0.1.0",
     "webpack": "^1.13.2"
   },
   "devDependencies": {
+    "autoprefixer": "^6.5.0",
+    "babel-core": "^6.17.0",
+    "babel-plugin-transform-runtime": "^6.15.0",
+    "babel-preset-es2015": "^6.16.0",
+    "babel-preset-stage-2": "^6.17.0",
+    "connect-history-api-fallback": "^1.3.0",
+    "css-loader": "^0.25.0",
+    "eventsource-polyfill": "^0.9.6",
+    "express": "^4.14.0",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.9.0",
+    "function-bind": "^1.1.0",
+    "html-webpack-plugin": "^2.22.0",
+    "http-proxy-middleware": "^0.17.2",
+    "json-loader": "^0.5.4",
+    "opn": "^4.0.2",
+    "ora": "^0.3.0",
+    "pegjs": "^0.9.0",
+    "shelljs": "^0.7.4",
     "ts-loader": "^0.8.2",
-    "typescript": "^2.0.3"
+    "typescript": "^2.0.3",
+    "url-loader": "^0.5.7",
+    "vue": "^2.0.1",
+    "vue-loader": "^9.5.1",
+    "vue-style-loader": "^1.0.0",
+    "webpack": "^1.13.2",
+    "webpack-dev-middleware": "^1.8.3",
+    "webpack-hot-middleware": "^2.12.2",
+    "webpack-merge": "^0.14.1"
   }
 }
